<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.whatsapp.devsoftware.whatsappclone.MainActivity">
    <item
        android:id="@+id/view_contact"
        android:orderInCategory="100"
        app:showAsAction="withText"
        android:title="@string/view_contact" />
    <item
        android:id="@+id/media"
        android:title="@string/media"
        android:orderInCategory="100"
        app:showAsAction="withText"
        />
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:orderInCategory="100"
        app:showAsAction="withText"
        />
    <item
        android:id="@+id/muteNotification"
        android:title="@string/muteNotification"
        android:orderInCategory="100"
        app:showAsAction="withText"
        />
    <item
        android:id="@+id/wallpaper"
        android:title="@string/wallpaper"
        android:orderInCategory="100"
        app:showAsAction="withText"
        />
    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:orderInCategory="100"
        app:showAsAction="withText"
        />

</menu>
