<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whatsapp.devsoftware.whatsappclone.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_marginStart="0dp">
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_arrow_back_white_24dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginTop="10dp"
                    android:background="?android:selectableItemBackground"/>

                <ImageButton
                    android:id="@+id/profilePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcherprofile"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/app_name"
                    android:layout_toEndOf="@+id/backButton"
                    android:background="?android:selectableItemBackground"
                    />
                <LinearLayout
                    android:id="@+id/chatNamesLayout"
                    android:orientation="vertical"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@+id/profilePicture"
                    android:layout_marginStart="@dimen/fab_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contactName"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:clickable="true"
                        android:focusable="true"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/primary_text"
                        android:textStyle="italic"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:clickable="true"
                        android:focusable="true"
                        />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/videoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/callButton"
                    android:src="@mipmap/ic_call_white_24dp"
                    android:background="?android:selectableItemBackground"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/type_a_message"
                    />

                <ImageButton
                    android:id="@+id/callButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/chatNamesLayout"
                    android:src="@mipmap/ic_videocam_white_24dp"
                    android:background="?android:selectableItemBackground"
                    android:layout_marginTop="11dp"
                    android:contentDescription="@string/type_a_message"
                    android:layout_marginStart="15dp"
                    />


            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.design.widget.CoordinatorLayout>
