<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.whatsapp.devsoftware.whatsappclone.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/chatScrollView"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:divider="@null"
            android:dividerHeight="0dp" >


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message_text_1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:background="@drawable/shape_bg_outgoing_bubble"
                android:backgroundTint="@color/primary_light"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="0dp"
                android:text="@string/hi"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/message_text_2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/how_are_you"
                android:textColor="@android:color/black"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:background="@drawable/shape_bg_incoming_bubble"
                android:layout_marginStart="5dp"
                android:layout_below="@id/message_text_1"
                android:backgroundTint="@android:color/white"
                />
        </RelativeLayout>


        </ScrollView>

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/chatScrollView"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">


            <EditText
                android:id="@+id/chatMessage"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:background="@drawable/circularedges"
                android:hint="@string/type_a_message"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:paddingStart="40dp"
                android:paddingEnd="0dp"
                android:textCursorDrawable="@color/primary"
                android:nextFocusUp="@id/chatMessage"
                />
            <ImageButton
                android:id="@+id/smileyButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                android:src="@mipmap/ic_sentiment_very_satisfied_black_24dp"
                android:contentDescription="@string/type_a_message"
                />
            <ImageButton
                android:id="@+id/attachButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/smileyButton"
                android:background="?android:selectableItemBackground"
                android:src="@mipmap/ic_attach_file_black_24dp"
                android:rotation="340"
                android:contentDescription="@string/type_a_message"
                android:layout_marginStart="230dp"
                />
            <ImageButton
                android:id="@+id/cameraButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                android:src="@mipmap/ic_camera_alt_black_24dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/type_a_message"
                android:layout_toEndOf="@id/attachButton"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_mic_white_24dp"
                android:background="@drawable/circlegreen"
                android:layout_toEndOf="@id/chatMessage"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/type_a_message"
                />
        </RelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
